# auto_lgtm

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  feature.md  main.py  pyproject.toml  requirements.txt  test_github_service.py
.github/workflows/: cloud-build.yaml
auto_lgtm/: cli.py  lgtm.py  lgtm_local.py  webhook.py
auto_lgtm/common/: github_client.py  rich_logger.py
auto_lgtm/factories/: github_factory.py
auto_lgtm/models/: review_models.py
auto_lgtm/prompts/: pr_review_prompt.py
auto_lgtm/services/: github_service.py  llm_service.py  review_service.py  secret_service.py
scripts/: build.sh  build_local.sh  deploy.sh  deploy_all.sh  setup_cloudbuild_permissions.sh  upload.sh
tests/: test_lgtm.py
