[project]
name = "auto-lgtm"
version = "0.1.0"
description = "Auto LGTM is a AI PR reviewer"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "pyfiglet>=0.8.post1",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "google-cloud-secret-manager==2.16.1",
    "openai>=1.77.0",
]
